set to impoert en-gb locales

--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -217,6 +217,7 @@ Control Room Log Edit
     {% endembed %}
 {% endblock %}
 {% block scripts %}
+    <script type="text/javascript" src="{{ asset('assets/vendor/moment/locale/en-gb.js') }}"></script>
     <script type="text/javascript">
         $(document).ready(function() {
             $('#General').hide();
