--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -305,7 +305,8 @@ Event Entry Form
         $(function () {
             $('#datetimepicker1').datetimepicker({
                 useCurrent: false,
-                format: 'YYYY-MM-DD HH:mm:ss',
+                format: 'YYYY-MM-DD HH:mm:ss z',
+                locale: 'en-gb',
                 showTodayButton: true
             });
         });
