--- a/app/Resources/views/form.html.twig
+++ b/app/Resources/views/form.html.twig
@@ -102,7 +102,8 @@ Control Room Log New Entry
         $(function () {
             $('#datetimepicker1').datetimepicker({
                 useCurrent: true,
-                format: 'YYYY-MM-DD HH:mm:ss',
+                format: 'YYYY-MM-DD HH:mm:ss z',
+                locale: 'en-gb',
                 showTodayButton: true
             });
         });
