Fixed log entry now date function

--- a/app/Resources/views/form.html.twig
+++ b/app/Resources/views/form.html.twig
@@ -108,10 +108,19 @@ Control Room Log New Entry
             });
         });
         $('#now_button').click(function(){
+            setTime();
+        });
+        
+        $(document).ready(function() {
+            setTime();
+        };
+        
+        function setTime(){
             var d = Date();
             var nowTime = moment(d).format("YYYY-MM-DD HH:mm:ss");
-            $('.datetimepicker1').val(nowTime);
-        });
+            $('.datetimepicker1').val(nowTime);  
+        };
+        
         
         var locationOptions = {
             url: function(phrase) {
