Modified event locations copy

--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -226,10 +226,11 @@ Event Entry Form
                                     </select>
                                 </div>
                                 <div class="col-md-2">
-                                    Copy button
+                                    <button type="button" id="copy_locations_button" class="btn btn-info">Copy Button</button>
                                 </div>
                             </div>
                         </div>
+                        <br>
                         <div class="row">  
                             <div class="col-md-8">
                                 {% if event.id is defined %}
