Modified event ediot form

--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -345,6 +345,11 @@ Event Entry Form
             });
         });
         
+        $('#copy_locations_button').click(function(){
+            var e = document.getElementById("copy_locations");
+            var copyId = e.options[e.selectedIndex].value;
+            $.post( "{{ path('location_copy', {'editId': "{{ event.id }}", 'copyId': copyId }) }}" );
+        });
         
     </script>
     
