added js console log url

--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -355,7 +355,9 @@ Event Entry Form
             //url = url.replace("copyID", copyId);
             url = url+"/{{ event.id }}/"+copyId;
             //$.post(url);
-            window.location = url;
+            console.log(copyId);
+            console.log(url);
+            //window.location = url;
         });
         
     </script>
