remove console logging

--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -348,16 +348,16 @@ Event Entry Form
         });
         
         $('#copy_locations_button').click(function(){
-            console.log("Copy Button");
+            //console.log("Copy Button");
             var e = document.getElementById("copy_locations");
             var copyId = e.options[e.selectedIndex].value;
             var url = '{{ path("location_copy") }}'; 
             //url = url.replace("copyID", copyId);
             url = url+"/{{ event.id }}/"+copyId;
             //$.post(url);
-            console.log(copyId);
-            console.log(url);
-            //window.location = url;
+            //console.log(copyId);
+            //console.log(url);
+            window.location = url;
         });
         
     </script>
