--- a/app/Resources/views/userUpdate.html.twig
+++ b/app/Resources/views/userUpdate.html.twig
@@ -54,6 +54,9 @@ Control Room Update User Details
                                     {{ form_widget(form.apiToken) }}
                                 </div>
                             </div>
+                            <div class="col-md-2">
+                                <button type="button" id="generate_token_button" class="btn btn-info">Generate New Token</button>
+                            </div>
                         </div><br>
                         <div class="row">                                                        
                             <div class="form-group">
@@ -92,4 +95,15 @@ Control Room Update User Details
             {% include 'darksky.html.twig' %}
         {% endblock %}
     {% endembed %}
-{% endblock %}              
+{% endblock %}            
+{% block scripts %}
+    <script type="text/javascript" src="{{ asset('assets/vendor/crypto-js/rollups/sha3.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('assets/vendor/crypto-js/components/enc-base64-min.js') }}"></script>
+    <script type="text/javascript">
+        $('#generate_token_button').click(function(){
+            var hash = CryptoJS.SHA3("{{ app.user.username }}");
+            $('#update_user_apiToken').val(hash.toString());
+            console.log(hash.toString());
+        });
+    </script>
+{% endblock %}
