--- a/app/Resources/views/userEdit.html.twig
+++ b/app/Resources/views/userEdit.html.twig
@@ -53,6 +53,9 @@ Control Room Edit User Details
                                 <div class="col-md-4">                                     
                                     {{ form_widget(form.apiToken) }}
                                 </div>
+                                <div class="col-md-2">
+                                    <button type="button" id="generate_token_button" class="btn btn-info">Generate New Token</button>
+                                </div>
                             </div>
                         </div><br>  
                         <div class="row">                                                        
@@ -105,3 +108,15 @@ Control Room Edit User Details
         {% endblock %}
     {% endembed %}
 {% endblock %}              
+{% block scripts %}
+    <script type="text/javascript" src="{{ asset('assets/vendor/crypto-js/rollups/sha3.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('assets/vendor/crypto-js/components/enc-base64-min.js') }}"></script>
+    <script type="text/javascript">
+        $('#generate_token_button').click(function(){
+            var hash = CryptoJS.SHA3("{{ app.user.username }}" + new Date().getTime());
+            var newToken = hash.toString().substring(0, 24);
+            $('#update_user_apiToken').val(newToken);
+            console.log(newToken);
+        });
+    </script>
+{% endblock %}
