Modified event forms for time/date issues

--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -325,7 +325,7 @@ Event Entry Form
         $(function () {
             $('#datetimepicker1').datetimepicker({
                 useCurrent: false,
-                format: 'YYYY-MM-DD HH:mm:ss z',
+                format: 'YYYY-MM-DD HH:mm:ss',
                 locale: 'en-gb',
                 showTodayButton: true
             });
@@ -335,6 +335,7 @@ Event Entry Form
             $('#datetimepicker2').datetimepicker({
                 useCurrent: false,
                 format: 'YYYY-MM-DD HH:mm:ss',
+                locale: 'en-gb',
                 showTodayButton: true
             });
         });
@@ -343,6 +344,7 @@ Event Entry Form
             $('#datetimepicker3').datetimepicker({
                 useCurrent: false,
                 format: 'YYYY-MM-DD HH:mm:ss',
+                locale: 'en-gb',
                 showTodayButton: true
             });
         });
